@startuml
' Diagrama 1: Herencia Simple
class Persona
class Empleado
Persona <|-- Empleado

newpage

' Diagrama 2: Cadena de Herencia con Object
class Object
class Persona
class Empleado

Object <|-- Persona
Persona <|-- Empleado

newpage

' Diagrama 3: Herencia con Atributos
skinparam classAttributeIconSize 0

class Persona {
  -nombre
  -edad
}

class Empleado {
  -sueldo
}

Persona <|-- Empleado

@enduml